<resources>
    <string name="app_name">Simple_Tracker</string>
    <string name="start_button">Start Trip</string>
    <string name="end_button">End Trip</string>
    <string name="history_button">History</string>
    <string name="exit_button">Exit</string>
    <string name="return_button">Return</string>
    <string name="trip_button">View Previous Trips</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="title_activity_maps">Trip_Map</string>
    <string name="delete_button">Delete Trip</string>
    <string name="upload_button">Upload Trip</string>
</resources>
