<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    tools:context="com.brianmannresearch.simple_tracker.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:keepScreenOn="true">

    <TextView
        android:layout_alignParentTop="true"
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@+id/latitude_text"
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/time_text"
        android:layout_below="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/exit_button"
        android:text="@string/exit_button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/history_button"
        android:text="@string/history_button"
        android:layout_above="@+id/exit_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/upload_button"
        android:text="@string/upload_button"
        android:layout_above="@id/history_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/end_button"
        android:text="@string/end_button"
        android:layout_above="@+id/upload_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/start_button"
        android:text="@string/start_button"
        android:layout_above="@+id/end_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</RelativeLayout>
